# jwstgo1840

./: README.org  pyproject.toml  setup.cfg
example/: calib_nirspecifu.py
jwstgo1840/nircam/: __init__.py
jwstgo1840/nirspec/: __init__.py  assign_wcs.py  background.py  dqflag.py  filtergratingflag.py  masking.py  outlier.py  pipeline.py  wcs_jwst.py
