[metadata]
name = jwstgo1840
version = attr: jwstgo1840.__version.__version__
description = JWST original pipeline for GO 1840
license_files = LICENSE.txt
author = sugayu

[flake8]
max-line-length = 88
extend-ignore = E203

[options]
python_requires = >=3.8, <4
packages = tokult
include_package_data = False
install_requires =
    numpy
    scipy
    astropy

# [options.extras_require]
# develop =
#     dev_packageA
#     dev_packageB

# [options.entry_points]
# console_scripts =
#     foo = package_name.module_name:func_name
#     foo_dev = package_name.module_name:func_name [develop]
# gui_scripts =
#     bar = gui_package_name.gui_module_name:gui_func_name
